<resources>
    <string name="app_name">List</string>
    <string name="label_new_task">Adicionar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_job">Criar Tarefa</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_n_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_excluir">Excluir</string>
</resources>